@@ -1,5 +1,6 @@
 0.22.2
   * Added possibility, automatically to change orientation (a portrait or a landscape) for OS2009
+  * Added fullscreen button for application mode 
 
 0.22.1
   * Changed default background to black colour
